# EonTrading

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  env.sh  pyproject.toml  run.py  run.sh
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: architecture.md  event-system.md  futu-api-experience.md  futu-opend-install.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ArchitectureDiagram.tsx  EquityChart.tsx  LivePipelineBacktest.tsx  LogViewer.tsx  MermaidDiagram.tsx  NewsFeed.tsx  ParamsPanel.tsx  PnlBySymbol.tsx  PriceBacktest.tsx  StatsCard.tsx  SystemStatus.tsx  TradeTable.tsx
frontend/src/hooks/: api.ts
frontend/src/types/: backtest.ts
migrations/: 001_ohlcv_replacing_merge.py  run.py
scripts/: clear_seen_urls.py  collect_news.py  distributed.py  logtail.py  reset_db.py  start_distributed.ps1  start_distributed.sh  tail_logs.py  test_backtest.py  test_ingest.py  test_portfolio_backtest.py  test_prescored_backtest.py  test_real_news_backtest.py  test_replay_backtest.py  test_sentiment_backtest.py  update_sp500.py
scripts/backtest/: legacy_portfolio_backtest.py  legacy_prescored_backtest.py  legacy_price_backtest.py  legacy_replay_backtest.py  legacy_sentiment_backtest.py  live_pipeline_backtest.py  live_pipeline_keyword_backtest.py  live_pipeline_llm_backtest.py  replay_live_backtest.py
scripts/data/: backfill_news.py  backfill_sp500.py  check_data.py  clear_news.py  collect_news.py  reset_collections.py  test_ingest.py  update_sp500.py
src/: env.py  settings.py
src/api/: server.py
src/backtest/: __init__.py  engine.py  portfolio_backtest.py  sentiment_backtest.py
src/common/: __init__.py  clock.py  costs.py  docker_ctl.py  event_bus.py  events.py  factories.py  heartbeat.py  log_collector.py  log_handler.py  news_poller.py  news_store.py  order_tracker.py  ping.py  position_store.py  price.py  reconcile.py  retry.py  sample_news.py  shutdown.py  startup.py  trade_store.py  trading_logic.py
src/data/ingest/: __init__.py  yfinance_ingest.py
src/data/news/: __init__.py  finnhub_source.py  loader.py  newsapi_source.py  reddit_source.py  rss_source.py  twitter_source.py
src/data/providers/: __init__.py  base_provider.py  yfinance_provider.py
src/data/storage/: __init__.py  base_storage.py  clickhouse_storage.py
src/data/utils/: __init__.py  db_helper.py
src/live/: analyzer_service.py  news_trader.py  news_watcher.py  order_logger.py  price_monitor.py  replay.py  replay_distributed.py  sentiment_trader.py
src/live/brokers/: broker.py
src/live/runners/: run_analyzer.py  run_executor.py  run_monitor.py  run_order_tracker.py  run_trader.py  run_watcher.py
src/strategies/: __init__.py  base_strategy.py  examples.py  rsi_mean_reversion.py  sentiment.py  sma_crossover.py
tests/: conftest.py  test_analyzer_service.py  test_api.py  test_backtest.py  test_brokers.py  test_code_patterns.py  test_costs.py  test_distributed_wiring.py  test_event_bus.py  test_futu_connection.py  test_integration.py  test_kafka_event_bus.py  test_lint.py  test_log_collector.py  test_mongo_log_handler.py  test_network_smoke.py  test_news_trader.py  test_news_watcher.py  test_order_tracker.py  test_position_aware_analyzer.py  test_position_store.py  test_price.py  test_price_monitor.py  test_property_based.py  test_reconcile.py  test_redis_event_bus.py  test_redis_live.py  test_smoke.py  test_strategies.py  test_trading_logic.py  test_twitter_source.py
tests/helpers/: __init__.py
