[project]
name = "eontrading"
version = "0.1.0"
description = "Trading system: data collection, backtesting, and live execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.66",
    "finnhub-python>=2.4.25",
    "pymongo[srv]>=4.15.3",
    "python-dotenv>=1.2.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.67.1",
    "clickhouse-connect>=0.7.0",
    "requests>=2.31.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
backtest = ["backtesting>=0.6.5"]
futu = ["futu-api>=9.1"]
dev = ["ipykernel>=7.1.0", "jupyter>=1.0.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "redis: tests requiring a running Redis instance (deselect with '-m not redis')",
    "futu: tests requiring a running Futu OpenD daemon on 127.0.0.1:11111",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter, not linter
    "E402",   # module-level import not at top — needed for dotenv/logging setup
    "F401",   # unused import — __init__.py re-exports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/**" = ["E402"]
"src/live/runners/**" = ["E402"]
"src/live/news_trader.py" = ["E402"]
"src/live/replay.py" = ["E402"]
