[project]
name = "eontrading"
version = "0.1.0"
description = "Trading system: data collection, backtesting, and live execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.66",
    "pymongo[srv]>=4.15.3",
    "python-dotenv>=1.2.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.67.1",
    "clickhouse-connect>=0.7.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
    "aiokafka>=0.12.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
eon = "run:main"

[project.optional-dependencies]
futu = ["futu-api>=9.1"]
dev = ["ipykernel>=7.1.0", "jupyter>=1.0.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0", "hypothesis>=6.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "-m 'not futu and not redis and not network'"
markers = [
    "redis: tests requiring a running Redis instance (deselect with '-m not redis')",
    "kafka: tests requiring a running Kafka broker (deselect with '-m not kafka')",
    "futu: tests requiring a running Futu OpenD daemon on 127.0.0.1:11111",
    "network: tests making real HTTP requests to external APIs/RSS feeds",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/data/providers/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ConnectionError",
    "except ImportError",
]
